<resources>
    <string name="app_name">proyecto_PMDM_john_2023-2024</string>
    <string name="restaurantes">Restaurantes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="registrate">¿No tienes Cuenta? Registrate</string>
    <string name="login">Login</string>
    <string name="registraterse">Registrate</string>
    <string name="sing_up">Sing Up</string>
    <string name="registrarse">Registrate</string>
    <string name="regresar">¿Ya tienes Cuenta?  Ingresa</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="bienvenida"> " " </string>
    <string name="nombre">" "</string>
    <string name="clase">Clase PMDM 2023-2024</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_principal">Principal</string>
    <string name="menu_login">Login</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_restaurantes">Restaurantes</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="principal">Principal</string>
    <string name="logout">Logout</string>
    <string name="buscar">Buscar</string>
    <string name="estamos_en_el_fragmento_buscar">Estamos en el fragmento buscar</string>
    <string name="estamos_en_el_fragment_subscription">EStamos en el fragment subscription</string>
    <string name="estamos_en_el_fragmento_library">Estamos en el fragmento library</string>
    <string name="estamos_en_el_fragment_shorts">Estamos en el fragment shorts</string>

    <string name="preferencias_fichero_login">PreferenciasAppRestaurante</string>
    <string name="preferencias_permiso_camara">preferenciasPermisoCamara</string>
    <string name="preferencias_email">PreferenciaEmail</string>
    <string name="preferencia_login">isLogin</string>
    <string name="preferencia_imagen">imagen</string>
    <string name="token">token</string>
    <string name="id">id</string>
    <string name="titulo">Descripcion</string>
    <string name="descripcion">Descripcion</string>
    <string name="contrase_a">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="home">Home</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="bienvenidos">Bienvenidos</string>
    <string name="img">img</string>

</resources>