<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigation_header"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:background="@drawable/fonfo_degradado"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:fabCradleMargin="10dp"
    app:fabCradleRoundedCornerRadius="50dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView_header"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:contentDescription="@string/nav_header_desc"
        android:layout_marginTop="0dp"

        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/text_user_nav_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="20sp"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/textView_email_nav_header"
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle" />
</LinearLayout>